# Robot-Agnostic-AI

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: README.md  requirements.txt
backend/app/: __init__.py  artifact_store.py  audit_bundle.py  audit_package.py  backend_audit.py  event_severity.py  evidence_bundle.py  evidence_package.py  evidence_verifier.py  main.py  mission_bridge_client.py  mission_schema.py  operator_policy.py  pdf_report.py  readiness.py  replay.py  report_store.py  scenario_manifest.py  settings.py  sse.py
backend/tests/: test_backend_api.py
configs/: event_severity_schema.json  mission_schema.json  operator_policy.yaml  scenarios.yaml
dashboard/: app.js  index.html  styles.css
docs/: api_audit_bundle_schema_v1.md  api_audit_package_schema_v1.md  architecture_reference.md  backend_api_contract.md  backend_audit_log.md  backend_health_readiness.md  cto_review_items.md  current_architecture_snapshot.md  dashboard_operator_workflow.md  decision_log.md  demo_operator_walkthrough.md  docker_environment.md  event_severity_semantics.md  evidence_artifact_registry.md  evidence_bundle_schema_v1.md  evidence_package_schema_v1.md  evidence_package_verification.md  getting_started.md  glossary.md  live_event_streaming.md  mission_replay_viewer.md  openapi.json  operator_api_policy.md  pdf_report_export.md  phase_01_project_foundation.md  phase_02_development_environment.md  phase_03_core_interfaces.md  phase_04_simulation_and_mock_robot.md  phase_05_backend_mission_system.md  phase_06_ros2_coordination_layer.md  phase_07_first_robot_platform_adapter.md  phase_08_payload_and_sensor_framework.md  phase_09_perception_and_ai_models.md  phase_10_operator_dashboard.md  phase_11_autonomy_planner.md  phase_12_safety_logging_deployment.md  project_phase_roadmap.md  project_status.md  safety_assumptions.md  scenario_test_harness.md  (+3 more)
ros2_ws/: README.md
ros2_ws/src/mission_api_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/mission_api_bridge/mission_api_bridge/: __init__.py  mission_api_bridge_node.py
ros2_ws/src/mock_go2x_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/mock_go2x_driver/mock_go2x_driver/: __init__.py  mock_go2x_node.py
ros2_ws/src/orimus_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/orimus_bringup/launch/: mock_go2x.launch.py
ros2_ws/src/orimus_bringup/orimus_bringup/: __init__.py
scripts/: orimus_restart.ps1  verify_project.sh
(+64 files in other folders)
