<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_api_bridge</name>
  <version>0.1.0</version>
  <description>ROS-aware HTTP API bridge for ORIMUS mission commands.</description>
  <maintainer email="103401387+drmnana@users.noreply.github.com">DrMnana</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>core_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

