<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orimus_bringup</name>
  <version>0.1.0</version>
  <description>Launch and bringup package for ORIMUS runtime configurations.</description>
  <maintainer email="103401387+drmnana@users.noreply.github.com">DrMnana</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mock_go2x_driver</exec_depend>
  <exec_depend>safety_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

